--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,2 +1,4 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/servicedb
 spring.datasource.password=Pass123/*-
+
+spring.jpa.hibernate.ddl-auto=create
