--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/servicedb
+spring.datasource.url=jdbc:mysql://localhost:3306/CadettSplittersDB
+
+spring.datasource.username=cadett-splitters
 spring.datasource.password=Pass123/*-
 
 spring.jpa.hibernate.ddl-auto=create
