Task: Added properties for production environment. (At time of push, I am unable to create a working container, however I had been able to create a container several times beforehand)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.application.name=cadettsplitterssushi
+spring.application.name=cadett-splitters-sushi
 server.port=9595
 
 server.error.include-message=always
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-spring.profiles.active=dev
+spring.profiles.active=prod
