--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/CadettSplittersDB
-
-spring.datasource.username=cadett-splitters
-spring.datasource.password=Pass123/*-
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:bilhyrdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
