Refactor: Corrected SecurityConfig regarding endpoints that everyone can access

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:mysql://mysql-service/CadettSplittersDB?autoReconnect
 spring.datasource.username=cadett-splitters
 spring.datasource.password=Pass123/*-
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
 #spring.jpa.defer-datasource-initialization=true
 #spring.sql.init.mode=always
