--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:mysql://mysql-service/CadettSplittersDB?autoReconnect=true
+spring.datasource.url=jdbc:mysql://mysql-service/CadettSplittersDB?autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 
 spring.datasource.username=cadett-splitters
 spring.datasource.password=Pass123/*-
 
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-#spring.jpa.defer-datasource-initialization=true
-#spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+
