--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/CadettSplittersDB
 
 spring.datasource.username=cadett-splitters
-spring.datasource.password=Pass123/*-
+spring.datasource.password=cspwd
 
 spring.jpa.hibernate.ddl-auto=create
 spring.sql.init.mode=always
