--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:mysql://mysql-service/CadettSplittersDB?autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 
 spring.datasource.username=cadett-splitters
-spring.datasource.password=Pass123/*-
+spring.datasource.password=cspwd
 
 spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
